# camera-query

./: .gitignore  Cargo.toml  README.md
.github/workflows/: audit.yml
src/: lib.rs  main.rs
src/onvif/: mod.rs
src/query/: mod.rs
